# renode-models-analyzer

./: .editorconfig  .gitignore  .gitmodules  Directory.Build.targets  LICENSE  ModelsAnalyzer.sln  README.md  omnisharp.json.sample
ModelsAnalyzer/Analyzers/: Analyzers.csproj  ModelRegistersAnalyzer.cs  PeripheralAttributeAnalyzer.cs  PeripheralClassesAnalyzer.cs  PublicInterruptsAnalyzer.cs  RegistersCoverageAnalyzer.cs  RegistersDefinitionAnalyzer.cs  RegistersEnumAnalyzer.cs  ResetAnalyzer.cs  Rules.cs
ModelsAnalyzer/Runner/: Options.cs  Program.cs  Project.cs  Runner.cs  Runner.csproj
ModelsAnalyzer/Runner/Misc/: AnalyzerStatusAggregator.cs  RoslynLocalizableStringConverter.cs
ModelsAnalyzer/Utils/: FunctionHelpers.cs  Helpers.cs  SymbolHelpers.cs  SymbolTracker.cs  TypeHelpers.cs  Utils.csproj
ModelsAnalyzer/Utils/Analyzers/: AnalyzerWithExtraInfo.cs  AnalyzerWithStatus.cs
ModelsAnalyzer/Utils/ContextualHelpers/: ContextualHelpers.cs  RegisterEnumUtils.cs  RegisterFormatIdentifiers.cs
ModelsCompare/: pyproject.toml  requirements-validate.txt  requirements.txt
ModelsCompare/RenodeModelsCompare/: __main__.py  models_match.py  regcompare.py  register.py  report_generator.py  synonyms.py  tokenizer.py
ModelsCompare/RenodeModelsCompare/registers/: converter.py  register.py  svd_converter.py  systemrdl_converter.py
ModelsCompare/Tests/: test_names_compare.py  test_regcompare.py  test_tokenizer.py
Scripts/: installModelsCompare.sh  installRunner.sh  simple_test_with_summary.py  uninstallModelsCompare.sh  uninstallRunner.sh
(+3 files in other folders)
